# dynamics

./: .gitignore  CMakeLists.txt  README.md  docs.md  fpm.toml  index.html  search.html
configure/: template.cmake
dependencies/: CMakeLists.txt
dependencies/peaks/: CMakeLists.txt
dependencies/spectrum/: CMakeLists.txt
doc/: index.html  search.html
examples/: CMakeLists.txt  c_dh_table_example_1.c  c_lti_example_1.c  example_models.f90  free_vibration_example.f90  frf_example_1.f90  frf_fit_example_1.f90  frf_proportional_example_1.f90  frf_sweep_example_1.f90  jacobian_example_1.f90  kinematics_example_1.f90  linkage_example_1.f90  mimo_frf_example_1.f90  pid_control_example_1.f90  poincare_example.f90  rotation_example_1.f90  siso_frf_example_1.f90  siso_lsq_fit_example.f90
install/: dynamicsConfig.cmake.in  template.pc
interface/: abs.html  aimag.html  apply_boundary_conditions.html  assignment(=).html  assignment(=)~2.html  binary_link.html  c_constraint_equations.html  c_harmonic_ode.html  c_modal_excite.html  c_ode_fit.html  c_vecfcn.html  c_window_function.html  conjg.html  constraint_equations.html  coordinate_system.html  dh_forward_kinematics.html  dh_jacobian.html  dh_parameter_set.html  dh_table.html  dot_product.html  evaluate_accelerance_frf_model.html  evaluate_receptance_frf_model.html  exp.html  frequency_response.html  frequency_sweep.html  harmonic_ode.html  is_parallel.html  line.html  log.html  matmul.html  modal_excite.html  ode_excite.html  operator(+).html  operator(-).html  operator(ASTERISK).html  operator(ASTERISK)~2.html  operator(ASTERISKASTERISK).html  operator(SLASH).html  plane.html  plucker_line.html  (+9 more)
interfaces/: CMakeLists.txt
lists/: files.html  modules.html  procedures.html  types.html
module/: dynamics.html  dynamics_c_api.html  dynamics_controls.html  dynamics_error_handling.html  dynamics_frequency_response.html  dynamics_geometry.html  dynamics_helper.html  dynamics_kinematics.html  dynamics_linkage.html  dynamics_maps.html  dynamics_quaternions.html  dynamics_rigid_bodies.html  dynamics_rotation.html  dynamics_stability.html  dynamics_structural.html  dynamics_system_id.html  dynamics_vibrations.html
proc/: acceleration_transform.html  apply_displacement_constraint.html  c_acceleration_transform.html  c_chirp.html  c_compute_modal_damping.html  c_cross_product.html  c_damping_from_fractional_overshoot.html  c_damping_from_log_decrement.html  c_determine_local_stability.html  c_dh_forward_kinematics.html  c_dh_forward_kinematics_2.html  c_dh_forward_kinematics_3.html  c_dh_forward_kinematics_4.html  c_dh_forward_kinematics_5.html  c_dh_forward_kinematics_6.html  c_dh_forward_kinematics_7.html  c_dh_forward_kinematics_8.html  c_dh_jacobian.html  c_dh_matrix.html  c_dh_rotate_x.html  c_dh_rotate_z.html  c_dh_translate_x.html  c_dh_translate_z.html  c_estimate_bandwidth.html  c_evaluate_accelerance_frf_model.html  c_evaluate_receptance_frf_model.html  c_evaluate_step_response.html  c_find_free_response_properties.html  c_find_settling_amplitude.html  c_fit_frf.html  c_frequency_response.html  c_frf_sweep.html  c_jacobian_generating_vector.html  c_logarithmic_decrement.html  c_modal_response.html  c_normalize_mode_shapes.html  c_q_factor.html  c_report_invalid_input.html  c_rise_time.html  c_rotate.html  (+87 more)
sourcefile/: dynamics.f90.html  dynamics_c_api.f90.html  dynamics_controls.f90.html  dynamics_error_handling.f90.html  dynamics_frequency_response.f90.html  dynamics_geometry.f90.html  dynamics_helper.f90.html  dynamics_kinematics.f90.html  dynamics_linkage.f90.html  dynamics_maps.f90.html  dynamics_quaternions.f90.html  dynamics_rigid_bodies.f90.html  dynamics_rotation.f90.html  dynamics_stability.f90.html  dynamics_structural.f90.html  dynamics_system_id.f90.html  dynamics_vibrations.f90.html
src/: CMakeLists.txt  dynamics.f90  dynamics_c_api.f90  dynamics_controls.f90  dynamics_error_handling.f90  dynamics_frequency_response.f90  dynamics_geometry.f90  dynamics_helper.f90  dynamics_kinematics.f90  dynamics_linkage.f90  dynamics_maps.f90  dynamics_quaternions.f90  dynamics_rigid_bodies.f90  dynamics_rotation.f90  dynamics_stability.f90  dynamics_state_space.f90  dynamics_structural.f90  dynamics_system_id.f90  dynamics_transfer_function.f90  dynamics_vibrations.f90
src/c/: dynamics.c  dynamics.h  dynamics_c_api.f90
test/: CMakeLists.txt  dynamics_frf_tests.f90  dynamics_geometry_tests.f90  dynamics_kinematics_tests.f90  dynamics_linkage_tests.f90  dynamics_rotation_tests.f90  dynamics_stability_tests.f90  dynamics_state_space_tests.f90  dynamics_structures_tests.f90  dynamics_system_id_tests.f90  dynamics_tests.f90  dynamics_transfer_function_tests.f90  dynamics_vibrations_tests.f90
test/c/: CMakeLists.txt  dynamics_c_test_helper.c  dynamics_c_test_helper.h  dynamics_c_tests.c  dynamics_frf_tests.c  dynamics_frf_tests.h  dynamics_geometry_tests.c  dynamics_geometry_tests.h  dynamics_kinematics_tests.c  dynamics_kinematics_tests.h  dynamics_linkage_tests.c  dynamics_linkage_tests.h  dynamics_rotation_tests.c  dynamics_rotation_tests.h  dynamics_stability_tests.c  dynamics_stability_tests.h  dynamics_state_space_tests.c  dynamics_state_space_tests.h  dynamics_transfer_function_tests.c  dynamics_transfer_function_tests.h  dynamics_vibrations_tests.c  dynamics_vibrations_tests.h
tipuesearch/: tipuesearch_content.js
type/: beam_element_2d.html  beam_element_3d.html  binary_link.html  c_dynamic_system_measurement.html  c_frequency_sweep_controls.html  c_harmonic_ode_container.html  c_iteration_behavior.html  c_iteration_controls.html  c_lm_solver_options.html  c_modal_excite_container.html  c_regression_statistics.html  c_siso_fit_container.html  c_vecfcn_container.html  c_window.html  coordinate_system.html  dh_parameter_set.html  dh_table.html  dynamic_system_measurement.html  element.html  forced_ode_container.html  frf.html  harmonic_ode_container.html  line.html  line_element.html  material.html  mimo_frf.html  model_information.html  node.html  plane.html  plucker_line.html  point.html  quaternion.html  (+4 more)
(+19 files in other folders)
